Move components from dswizard

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+scikit-learn
+networkx
+numpy
+ConfigSpace
 # =============================================================================
 # DEPRECATION WARNING:
 #
