--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,6 @@
-pandas
-scikit-learn
-networkx
-numpy
-ConfigSpace
-
-# =============================================================================
-# DEPRECATION WARNING:
-#
-# The file `requirements.txt` does not influence the package dependencies and
-# will not be automatically created in the next version of PyScaffold (v4.x).
-#
-# Please have look at the docs for better alternatives
-# (`Dependency Management` section).
-# =============================================================================
-#
-# Add your pinned requirements so that they can be easily installed with:
-# pip install -r requirements.txt
-# Remember to also add them in setup.cfg but unpinned.
-# Example:
-# numpy==1.13.3
-# scipy==1.0
-#
+ConfigSpace==0.4.*
+numpy==1.16.*
+pandas==0.24.*
+pytest
+scikit-learn==0.22.*
+scipy==1.2.*
