--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 psutil==5.7.2
 pymfe==0.4.*
 ConfigSpace==0.4.*
-numpy==1.19.*
-pandas==1.1.*
+numpy==1.20.1
+pandas==1.2.3
 pytest
-scikit-learn==0.23.*
-scipy==1.5.*
+scikit-learn==0.24.1
+scipy==1.6.1
