--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 psutil==5.7.2
 pymfe==0.4.*
 ConfigSpace==0.4.*
-numpy==1.20.1
-pandas==1.2.3
+numpy~=1.20.3
+pandas~=1.2.4
 pytest
-scikit-learn==0.24.1
-scipy==1.6.1
+scikit-learn~=0.24.2
+scipy~=1.6.3
