--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-psutil==5.7.2
-pymfe==0.4.*
-ConfigSpace==0.4.*
-numpy~=1.20.3
-pandas~=1.2.4
+psutil~=5.8.0
+pymfe~=0.4.1
+ConfigSpace~=0.4.20
+numpy~=1.21.4
+pandas~=1.3.4
 pytest
-scikit-learn~=0.24.2
-scipy~=1.6.3
+scikit-learn~=1.0.1
+scipy~=1.7.2
