--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ psutil~=5.9.0
 pymfe~=0.4.1
 ConfigSpace~=0.4.21
 numpy~=1.21.5
-pandas~=1.4.1
+pandas>=1.3.0
 pytest
 scikit-learn~=1.0.2
 scipy~=1.8.0
